# composer

./: CMakeLists.txt  Composer.sln  Composer.vcxproj  Composer.vcxproj.filters  Eye.cpp  Eye.sln  Eye.vcxproj  Eye.vcxproj.filters  README.md  build.bat  editor.bat  tokenizer.cpp  tokenizer.h
buildscripts/: build.sh  build_debug.sh
cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmpc.vcxproj  cmpc.vcxproj.filters  my_project.sln
cmake2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
compiler/: Composer.cpp  Eye.cpp  composer.h  console_helper.h  error.h  kaleidoscope.cpp  matcher.h  parser.cpp  parser.h  tokenizer.cpp  tokenizer.h
compiler/Lexer/: Lexer.cpp  Lexer.h  Token.h
compiler/ast/: ast.h  common.h  expression.h  function.h  statement.h  toplevel.h
compiler/codegen/: codegen.cpp  codegen.h  llvm.h  llvm_helpers.h  module.cpp  module.h  types.h
compiler/parser/: Module.cpp  comp.cpp  enum.cpp  expression.cpp  function.cpp  parser.cpp  parser.h  statement.cpp  struct.cpp
examples/: CustomerOrders.cmp  Dog.cmp  Exporter.cmp  Factorial.cmp  LinkedList.cmp  Object.cmp
examples/aoc/: common.cmpp
src/compiler/: Composer.cpp  composer.h
src/compiler/AST/: Expression.h  Function.h  Module.h  Statement.h
src/compiler/Codegen/: Codegen.cpp  Codegen.h  Function.cpp  Statement.cpp
src/compiler/Lexer/: Lexer.cpp  Lexer.h
src/compiler/Parser/: Comp.cpp  Enum.cpp  Expression.cpp  Module.cpp  Parser.cpp  Parser.h  (+2 more)
(+2 files in other folders)
